--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,20 +4,21 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "rsskey"
-version = "0.0.1"
+version = "0.1.0"
 description = "RSS feed mirror on Misskey"
 readme = "README.md"
-requires-python = ">=3.6"
+requires-python = ">=3.7"
 license = { file = "COPYING" }
 authors = [ { name = "Nguyễn Gia Phong", email = "mcsinyx@disroot.org" } ]
 maintainers = [ { name = "Nguyễn Gia Phong", email = "mcsinyx@disroot.org" } ]
 keywords = [ "rss", "misskey" ]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
-    "Intended Audience :: Developers",
+    "Framework :: Trio",
+    "Intended Audience :: System Administrators",
     "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
     "Operating System :: OS Independent",
-    "Programming Language :: Python" ]
-dependencies = [
-    "feedparser", "httpx", "loca", "markdownify", "python-dateutil", "trio" ]
-urls = { project = "https://sr.ht/~cnx/rsskey" }
+    "Programming Language :: Python",
+    "Topic :: Utilities" ]
+dependencies = [ "feedparser", "httpx", "loca", "markdownify", "trio" ]
+urls = { SourceHut = "https://sr.ht/~cnx/rsskey" }
